complate footer & project

--- a/landing/landing.html
+++ b/landing/landing.html
@@ -25,7 +25,7 @@
             <div class="col-12 col-lg-7 order-2 order-lg-1">
                 <form class="form-control rounded-0 d-flex mt-2" role="search">
                     <div class="dropdown">
-                        <button class="btn btn-sm m msh-bg-white mt-1 border-0 dropdown-toggle" type="button"
+                        <button class="btn btn-sm m msh-btn-white mt-1 border-0 dropdown-toggle" type="button"
                             data-bs-toggle="dropdown">
                             همه دسته بندی ها
                         </button>
@@ -33,7 +33,7 @@
                     </div>
                     <input class="form-control border-0 border-end me-2 rounded-0" type="search"
                         placeholder="کالای مورد نظر خود را جستجو کنید" />
-                    <button class="btn msh-bg-light-green rounded-0" type="submit">
+                    <button class="btn msh-btn-light-green rounded-0" type="submit">
                         <img src="../icons/i-search.png" alt="search">
                     </button>
                 </form>
@@ -62,7 +62,7 @@
         <div class="row mt-2">
             <!-- s-catg-start -->
             <div class="col-12 col-lg-3 order-1 order-md-0">
-                <button class="btn msh-bg-light-green w-100 px-0 rounded-0" type="button" data-bs-toggle="collapse"
+                <button class="btn msh-btn-light-green w-100 px-0 rounded-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#catg-nxt-slider" aria-controls="catg-nxt-slider">
                     <div class="row justify-content-start align-items-start mx-0">
                         <div class="col-1 d-flex flex-column justify-content-center px-0">
@@ -125,7 +125,7 @@
                                     خوراکهای ایرانی و بین المللی گیاهی، خام گیاهی و وگن با مواد
                                     اولیه سالم و ارگانیک هر روز درب منزل شما. اکنون در شیراز
                                 </div>
-                                <button type="submit" class="btn msh-bg-dark-green m-3">اکنون خرید کنید</button>
+                                <button type="submit" class="btn msh-btn-dark-green m-3">اکنون خرید کنید</button>
                             </div>
                         </div>
                     </div>
@@ -330,6 +330,129 @@
         <!-- offer-end -->
     </main>
     <!-- main-end -->
+
+    <!-- footer-start -->
+    <footer class="msh-bg-dark-green p-4 pe-5">
+        <div class="d-flex flex-column justify-content-around align-items-center m-4">
+            <img class="mt-3" src="../icons/i-mail.png" alt="">
+            <div class="mt-3 fw-bold">در خبرنامه مهراشاپ عضو شوید</div>
+            <div class="mt-3 msh-fs-0p8">ایمیل خود را ثبت کنید تا از آخرین تخفیف ها و محصولات حراجی در مهراشاپ با خبر
+                شوید</div>
+            <form class="form-control rounded d-flex mt-3 w-50" role="search">
+                <input class="form-control border-0" type="search" placeholder="ایمیل خود را وارد کنید..." />
+                <button class="btn msh-btn-light-green" type="submit">
+                    عضویت
+                </button>
+            </form>
+        </div>
+        <div class="row justify-content-center mt-5 ">
+            <div class="col-6 col-lg-2 p-3">
+                <img src="../imgs/mehrashop-logo-2.png" alt="">
+                <div class="fw-light msh-fs-0p8 mt-2">مهراشاپ یک فروشگاه اینترنتی ارگانیک و سلامت محور</div>
+                <a class="fw-light msh-fs-0p8 msh-txt-white" href="#">بیشتر بدانید...</a>
+            </div>
+            <div class="col-6 col-lg-2 p-3">
+                <div class="fw-bold">ارتباط</div>
+                <ul type="none" class="p-1 pt-4 msh-fs-0p8">
+                    <li class="d-flex justify-content-start my-3">
+                        <img style="width: 20px; height: 20px;" src="../icons/i-phone-call-1.png" alt="">
+                        <a class="px-2 text-decoration-none msh-txt-white">09301112233</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <img style="width: 20px; height: 20px;" src="../icons/i-time.png" alt="">
+                        <a class="px-2 text-decoration-none msh-txt-white">شنبه تا چهارشنبه: 7 صبح تا 5 عصر پنجشنبه: 8
+                            صبح تا 2 بعدازظهر</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <img style="width: 20px; height: 20px;" src="../icons/i-email-1.png" alt="">
+                        <a class="px-2 text-decoration-none msh-txt-white">info@----shop.com</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-6 col-lg-2 p-3">
+                <div class="fw-bold">قوانین مهراشاپ</div>
+                <ul type="none" class="p-1 pt-4 msh-fs-0p8">
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">قوانین ارسال و تحویل</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">بازگشت محصول</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">خرابی محصولات</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">قوانین محصولات</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">خوراکی</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">لغو خرید</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">عضویت در مهراشاپ</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-6 col-lg-2 p-3">
+                <div class="fw-bold">فروشندگان</div>
+                <ul type="none" class="p-1 pt-4 msh-fs-0p8">
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">قوانین ثبت نام</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">ثبت فروشگاه</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">قوانین محصولات</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">حمل و نقل کالا</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">روابط عمومی فروشندگان</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">تماس با مدیریت</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-6 col-lg-2 p-3">
+                <div class="fw-bold">درباره مهراشاپ</div>
+                <ul type="none" class="p-1 pt-4 msh-fs-0p8">
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">ارزشهای مهراشاپ</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">محصولات ما</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">همکاری با مهراشاپ</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">استخدام</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">انتقادات و پیشنهادات</a>
+                    </li>
+                    <li class="d-flex justify-content-start my-3">
+                        <a class="px-2 text-decoration-none msh-txt-white">پرسشهای رایج</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-6 col-lg-2 p-3">
+                <a href="#">
+                    <img class="w-50" src="../imgs/enamad_icon_text_color_blue_1024-1.png" alt="">
+                </a>
+                <a href="#">
+                    <img class="w-50" src="../imgs/samandehi-e1649079516170 1.png" alt="">
+                </a>
+            </div>
+        </div>
+    </footer>
+    <!-- footer-end -->
+
     <!-- scripts-start -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
